Correct Preface spacing Issue #1937

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -2462,14 +2462,16 @@ div.book div.preface > .titlepage h1.title {
 }
 div.book div.preface > div.section div.titlepage > div > div > h2 {
   page-break-after: avoid;
-  color: #77294A;
   font-size: 15.6px;
+  color: #77294A;
+  margin-bottom: 15.6px;
 }
 div.book div.preface > div.section > div.section > div.titlepage > div > div > h3 {
   page-break-after: avoid;
+  font-size: 15.6px;
   font-family: 'Noto Sans', sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
   color: #77294A;
-  font-size: 15.6px;
+  margin-bottom: 15.6px;
 }
 .chapter > .introduction > .figure.splash {
   font-size: xx-small;
@@ -4807,6 +4809,9 @@ div.book div.preface > div.section p + .section {
 }
 div.book div.preface > div.section > div.section {
   margin-bottom: 18px;
+}
+div.book div.preface > p + .section {
+  margin-top: 18px;
 }
 .chapter > .introduction {
   margin-top: -1in;
