--- a/css/refactor/astronomy-skeleton.less
+++ b/css/refactor/astronomy-skeleton.less
@@ -20,14 +20,16 @@ div.itemizedlist, div.orderedlist {
 div.book div.preface {
   > div.section {
     #content>#section>.style(any; preface);
-     p + .section {
+    p + .section {
       margin-top: 18px;
     }
     > div.section {
       #content>#section>.style(any; preface; section);
     }
   }
-
+  > p + .section {
+      margin-top: 18px;
+  }
 }
 .chapter {
   > .introduction {
